--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,7 @@ License: What license is it under? GPL-3
 Depends: Rcpp,
     RcppArmadillo,
     ggplot2,
-    reshape2
+    reshape2,
+	foreach,
+	doParallel
 LinkingTo: Rcpp, RcppArmadillo
