--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,10 +7,8 @@ Author: Jonathan Fintzi
 Maintainer: Jonathan Fintzi <fintzij@uw.edu>
 Description: Estimation of stochastic SIR epidemic parameters via Bayesian data augmentation.
 License: What license is it under? GPL-3
-Depends: Rcpp,
-    RcppArmadillo,
-    ggplot2,
+Depends: ggplot2,
     reshape2,
 	foreach,
 	doParallel
-LinkingTo: Rcpp, RcppArmadillo
+LinkingTo: 
